Bug 300221 - The bookmarks button, when added to the toolbar, should react imidiately and not after holding the mouse button for 2 seconds
Summary: The bookmarks button, when added to the toolbar, should react imidiately and ...
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 168072 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-05-18 06:34 UTC by jens
Modified: 2012-09-13 22:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jens 2012-05-18 06:34:09 UTC
Hello there,

With the help of 'Configure Toolbars..' I have added the bookmark as a button so konqueror looks similar to reKonq. Unfortunately the bookmarks wil be shown not on direct mouse down, but after holding mouse down after 2 seconds. It should show the bookmarks imitiately like in reKonq.

Reproducible: Always

Steps to Reproduce:
1. Configure toolbars...
2. Add 'Bookmarks'
3. Press the newly added 'Bookmarks' button on the toolbar
Actual Results:  
Bookmarks wil be shown when you hold your mouse button for 2 seconds

Expected Results:  
Bookmarks should be shown imidiately.

As far as I remember there wasn't a default icon either for the bookmarks button, it should be set to the standaard favourites icon.
Comment 1 Dawit Alemayehu 2012-05-26 19:09:52 UTC
Git commit 70512f5081b1d2e64cd19b0e60cb59386b15fdf6 by Dawit Alemayehu.
Committed on 26/05/2012 at 18:11.
Pushed by adawit into branch 'KDE/4.8'.

Avoid delayed popup of the bookmark menu when it is inserted into the toolbar.
FIXED-IN: 4.8.4

M  +1    -0    konqueror/src/konqmainwindow.cpp

http://commits.kde.org/kde-baseapps/70512f5081b1d2e64cd19b0e60cb59386b15fdf6
Comment 2 Dawit Alemayehu 2012-05-26 19:10:26 UTC
Git commit 35b9438a1d9d0dd6c7af652ceff8348c38f1242b by Dawit Alemayehu.
Committed on 26/05/2012 at 18:11.
Pushed by adawit into branch 'master'.

Avoid delayed popup of the bookmark menu when it is inserted into the toolbar.
FIXED-IN: 4.8.4
(cherry picked from commit 70512f5081b1d2e64cd19b0e60cb59386b15fdf6)

M  +1    -0    konqueror/src/konqmainwindow.cpp

http://commits.kde.org/kde-baseapps/35b9438a1d9d0dd6c7af652ceff8348c38f1242b
Comment 3 jens 2012-05-26 19:24:23 UTC
Thanks a lot!
Comment 4 Dawit Alemayehu 2012-09-13 22:32:41 UTC
*** Bug 168072 has been marked as a duplicate of this bug. ***