Avoid delayed popup of the bookmark menu when it is inserted into the toolbar.

BUG: 300221
FIXED-IN: 4.8.4
(cherry picked from commit 70512f5081b1d2e64cd19b0e60cb59386b15fdf6)